TaskTracker Backend Complete

--- a/TaskTrackerAssignment/source-code/tasktracker-backend/src/main/resources/application.properties
+++ b/TaskTrackerAssignment/source-code/tasktracker-backend/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+## Server Settings
+server.port = 8080
+#server.servlet.context-path = /tasktrackerbackend
 # ===============================
 # = DATA SOURCE
 # ===============================
 
-spring.datasource.url = jdbc:h2:.\\src\\main\\resources\\DB\\main
+spring.datasource.url = jdbc:h2:.\\src\\main\\resources\\DB\\tasktracker
 spring.datasource.username = SA
 spring.datasource.password = 
 
@@ -28,7 +31,3 @@ spring.jpa.show-sql = true
 
 spring.h2.console.enabled = true
 spring.h2.console.path = /h2-console
-
-## Server Settings
-#server.port = 8080
-server.contextPath = /context-path
