--- a/TaskTrackerAssignment/source-code/tasktracker-backend/src/main/resources/application.properties
+++ b/TaskTrackerAssignment/source-code/tasktracker-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8080
 # ===============================
 # = DATA SOURCE
 # ===============================
-
+spring.datasource.name = task_db
 spring.datasource.url = jdbc:h2:.\\src\\main\\resources\\DB\\tasktracker
 spring.datasource.username = SA
 spring.datasource.password = 
@@ -13,8 +13,8 @@ spring.datasource.password =
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create
 
 spring.datasource.driverClassName=org.h2.Driver
 
