--- a/16 - Spring Assignment - 2 JAVA/Assignment ID-10_Spring_Assignment2_output/10_Spring_Assignment2_web/pom.xml
+++ b/16 - Spring Assignment - 2 JAVA/Assignment ID-10_Spring_Assignment2_output/10_Spring_Assignment2_web/pom.xml
@@ -53,17 +53,18 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
-		<!-- <resources>
-			<resource>
-				<directory>src</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-		</resources> -->
+		<!-- <resources> <resource> <directory>src</directory> <excludes> <exclude>**/*.java</exclude> 
+			</excludes> </resource> </resources> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -80,8 +81,8 @@
 				<version>2.3</version>
 				<configuration>
 					<warName>${name}</warName>
-					<!-- <outputDirectory>H:\Softwares\Development\Tomcat\Tomcat 8.0\webapps</outputDirectory> -->
-					<outputDirectory>C:\Tomcat_Servers\apache-tomcat-8.0.12_working\webapps</outputDirectory>
+					<outputDirectory>H:\Softwares\Development\Tomcat\Tomcat 8.0\webapps</outputDirectory>
+					<!-- <outputDirectory>C:\Tomcat_Servers\apache-tomcat-8.0.12_working\webapps</outputDirectory> -->
 				</configuration>
 			</plugin>
 		</plugins>
